删除加载在线字体资源

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
+    <!-- 在线字体下载缓慢，阻碍网页渲染 -->
+    <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet"> -->
 
     <link href="css/style.css" rel="stylesheet">
     <!-- 此处增加 media属性 只有在打印的时候才加载 -->
